--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ env:
 before_install: gem install bundler
 
 before_script:
-  - 'RAILS_ENV=test bundle exec rake db:create db:structure:load --trace'
+  - bundle exec rake db:create --trace
+  - bundle exec rake db:structure:load --trace
 
 script: ./build.sh $RAKE_TASK
 
