Revert "Remove db creation step from .travis.yml"
This reverts commit cfa0e97561f3dafcb0c53a111bb56d736b228298.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ env:
 
 before_install: gem install bundler
 
+before_script:
+  - bundle exec rake db:create --trace
+
 script: bundle exec rspec spec
 
 # matrix:
