Revert "use config import for db setup"
This reverts commit 455b3f0041f511d05e8c268869f76857dfc81e96.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: ruby
 dist: trusty
 rvm: 2.4.2
 
-import:
-  - travis-ci/build-configs/db-setup.yml
-
 cache:
   bundler: true
 
@@ -19,5 +16,7 @@ env:
     secure: BdVC3OHqYcgePLrkKIk28Ewn/dxCYFf3Cx+Q8P+BCDj6UPJyRSbKmILBzuX96H5xhKmUFo0A/upUhJI9UUP9aXHO7MzRe04/c88QdO4wGacVUaIyB20S0pr262zbc/nA50K9cVgpmWc64n6uQR1tgM6ZyyBnBeXkLzCAOHPq99I=
 
 before_install: gem install bundler
+
+before_script: bundle exec rake db:create --trace
 
 script: bundle exec rspec spec
