--- a/.travis.yml
+++ b/.travis.yml
@@ -20,21 +20,14 @@ env:
 
 before_install: gem install bundler
 
-script: bundle exec rspec spec
-
 jobs:
  include:
    - stage: "testing time"
-   - stage: ":ship: it to Quay.io"
-     sudo: required
-     dist: trusty
+     script: bundle exec rspec spec
+   - stage: ":ship: it to quay.io"
      ruby:
      services:
      addons:
      before_install: skip
      install: skip
-     before_script:
-       - curl -L https://github.com/docker/compose/releases/download/1.13.0/docker-compose-`uname -s`-`uname -m` > ./docker-compose
-       - sudo mv ./docker-compose /usr/local/bin/docker-compose
-       - sudo chmod +x /usr/local/bin/docker-compose
-     script: ./script/docker-build-and-push
+     script: make ship
