--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 rvm: 2.4.2
 
 import:
-  - travis-ci/build-configs/db-setup.yml
+  - travis-ci/build-configs:db-setup.yml
 
 cache:
   bundler: true
