--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,4 @@ jobs:
      before_install: skip
      install: skip
      script: make ship
+     if: type = cron OR commit_message =~ /ship:docker/ OR env(SHIP_DOCKER) = true
