--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,16 @@ import:
 
 rvm: 2.6.5
 
-cache: bundler
-
 env:
   matrix:
   - RAKE_TASK=spec
   global:
     secure: BdVC3OHqYcgePLrkKIk28Ewn/dxCYFf3Cx+Q8P+BCDj6UPJyRSbKmILBzuX96H5xhKmUFo0A/upUhJI9UUP9aXHO7MzRe04/c88QdO4wGacVUaIyB20S0pr262zbc/nA50K9cVgpmWc64n6uQR1tgM6ZyyBnBeXkLzCAOHPq99I=
+
+before_install:
+  - gem uninstall -v '>=2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '2.3.7'
+  - gem install rubygems-update -v 3.4.22
 
 addons:
   apt:
@@ -36,5 +39,3 @@ jobs:
      install: skip
      script: make ship
      if: commit_message =~ /ship:docker/ OR env(SHIP_DOCKER) = true
-before_install:
-  - gem install rubygems-update -v 3.4.22
