--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
    - stage: "testing time"
      script: bundle exec rspec spec
    - stage: ":ship: it to quay.io"
-     dist: bionic
+     dist: focal
      group: edge
      ruby:
      services:
