[TBT-84] Enterprise merge (#312)
* pass :keep_netrc preference to the worker

* Added preferences method

* Added preferences method to User class too.

* use config import for db setup

* Update .travis.yml

* Don't include migrated jobs when calculating concurrency

When we migrate a build history it's possible that some jobs are still
running on .org. We shouldn't count them towards concurrency limits
because they're technically running on .org

* Don't enqueue jobs that are migrated from .org

When we migrate build history some of the builds may be in the created
state. We don't want to enqueue them as then they would be running on
both platforms.

* Put workspace_settings on payload

* Fix workspace_settings

ws_config is a Hashr, which doesn't have `#key?`

* Environment variables can be restricted to specified branch

* Env model extended

* Tests fixes

* Return type improvement

* Test fixed

* Test fix

* Rename workspace_settings to workspace

*_settings is redundant.

* Don't count migrated jobs towards concurrency and don't enqueue them (#190)

I've already attempted it to fix the problem in 01139a4, but I only
fixed one code path, which is currently not used, so the changes didn't
go into effect. This commit applies the changes to the other code path
as well.

The reason we need to do it is because when we migrate jobs from .org to
.com they might still be in a state that is considered by gatekeeper. So
they might be started but they're running on .org not .com, thus we
shouldn't count them as running on .com. The same with new jobs - we
don't want to start them as they would start on .org anyway.

I decided to filter these jobs in code instead of in the database
because the number of jobs that we fetch from the database is relatively
small and if I had to do it in the DB I would have to always join jobs
with repositories, which actually might be slower.

* allow env vars to be hashes

* d

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,16 @@ env:
   matrix:
   - RAKE_TASK=spec
   global:
-    secure: BdVC3OHqYcgePLrkKIk28Ewn/dxCYFf3Cx+Q8P+BCDj6UPJyRSbKmILBzuX96H5xhKmUFo0A/upUhJI9UUP9aXHO7MzRe04/c88QdO4wGacVUaIyB20S0pr262zbc/nA50K9cVgpmWc64n6uQR1tgM6ZyyBnBeXkLzCAOHPq99I=
+    - secure: BdVC3OHqYcgePLrkKIk28Ewn/dxCYFf3Cx+Q8P+BCDj6UPJyRSbKmILBzuX96H5xhKmUFo0A/upUhJI9UUP9aXHO7MzRe04/c88QdO4wGacVUaIyB20S0pr262zbc/nA50K9cVgpmWc64n6uQR1tgM6ZyyBnBeXkLzCAOHPq99I=
+    - PATH=/snap/bin:$PATH
+
+before_install:
+  - gem uninstall -v '>=2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '2.3.7'
+  - gem install rubygems-update -v 3.4.22
 
 addons:
-  apt:
+  - apt:
     packages:
       - rabbitmq-server
 
@@ -27,7 +33,8 @@ jobs:
    - stage: "testing time"
      script: bundle exec rspec spec
    - stage: ":ship: it to quay.io"
-     dist: bionic
+     dist: focal
+     group: edge
      ruby:
      services:
      addons:
@@ -35,4 +42,4 @@ jobs:
      before_script: skip
      install: skip
      script: make ship
-     if: commit_message =~ /ship:docker/ OR env(SHIP_DOCKER) = true
+     if: (branch = master and type = push ) OR commit_message =~ /ship:docker/ OR env(SHIP_DOCKER) = true
